k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mynodeapp
  labels:
    app: mynodeapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mynodeapp
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: mynodeapp
    spec:
      containers:
      - name: mynodeapp
        image: docker.io/khaly/mynodeapp:v1
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: mynodeapp
  labels:
    app: mynodeap
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
  selector:
    app: mynodeapp
